# AI_Job_Interviewer_with_crewAI

./: README.md  SOBRE_WHISPER.md  chatbot_ui.py  interview_practice_system.py  pyproject.toml  ruff.toml
