[project]
name = "ai-mock-interviewer"
version = "0.1.0"
description = "Um entrevistador simulado com CrewAI"
readme = "README.md"
authors = [
    { name = "EddyGiusepe", email = "eddychirinos.unac@gmail.com" }
]
requires-python = ">=3.10, <3.12"
dependencies = [
    "crewai[tools]>=0.114.0",
    "streamlit>=1.44.1",
    "streamlit-mic-recorder>=0.0.8",
    "speechrecognition>=3.14.2",
    "openai-whisper>=20240930",
    "jupyterlab>=4.4.6",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pdbp>=1.6.1",
    "ruff>=0.9.3",
]

[tool.ruff]
extend = "ruff.toml"
